gh-308 fix cookie spacing (added body class when cookie notice is active via JS)

--- a/_scss/components/_component-hero.scss
+++ b/_scss/components/_component-hero.scss
@@ -21,7 +21,7 @@
 .hero__text {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 40vh; // logo in video is a bit off from the center
+  margin-top: 32vh;
   position: relative;
   vertical-align: middle;
   z-index: 20;
@@ -46,6 +46,10 @@
   .button {
     margin-top: 1rem;
   }
+}
+
+.cookie-notice--active .hero__text {
+  margin-top: 45vh;
 }
 
 .hero__cover {
